<resources>
    <string name="app_name">ZAIRZA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="thoughts">Thoughts</string>
    <string name="projects">Projects</string>
    <string name="about_us">About Us</string>
    <string name="achievements">Achievements</string>
    <string name="team">Team</string>
    <string name="faq">FAQ</string>
    <string name="registrations">Registrations</string>
    <string name="contact_us">Contact Us</string>
    <string name="communicate">Communicate</string>
</resources>
