<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_thought"
            android:icon="@drawable/thought"
            android:title="@string/thoughts" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/win"
            android:title="@string/achievements" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/team"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/register"
            android:title="@string/registrations" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/contact"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>
